--- a/Posts/templates/Posts/_single_post.html
+++ b/Posts/templates/Posts/_single_post.html
@@ -1,6 +1,6 @@
 <blockquote class="blockquote">
 <p class="mb-0">{{ post.message }}</p>
-<a href="{% url 'posts:post_detail' pk=post.pk slug=post.group.slug %}">Go to post</a>
+<a href="{% url 'posts:post_detail'  slug=post.slug %}">Go to post</a>
 <footer class="blockquote-footer">Created by: <a href="#">@{{ post.user.username }}</a> at <cite title="Source Title"><a href="#">{{ post.created_at }}</a></cite>
     {% if post.group %}
 in <a href="#">{{ post.group.name }}</a>
