--- a/Posts/templates/Posts/post_list.html
+++ b/Posts/templates/Posts/post_list.html
@@ -2,7 +2,9 @@
 
 {% block content %}
  <h5>This is the post list page</h5>
-    {% for i in post_list %}
-        {{ i }}<br>
+    {% for post in post_list %}
+        {% if request.user == post.user  %}
+        <a href="{% url 'Posts:post_detail' slug=post.slug %}">{{ post.post_title }}</a><br>
+        {% endif %}
     {% endfor %}
 {% endblock %}
