--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,10 @@
             <li><a href="{% url 'Users:logout' %}">Log Out</a></li>
             <li><a href="{% url 'Posts:createPost' %}">CreatePost</a></li>
             <li><a href="{% url 'Posts:post_lists' %}">List posts</a></li>
+{#            <li><a href="{% url 'Tutorial:addtutorial' %}">AddTutorial</a></li>#}
+{#            <li><a href="{% url 'Tutorial:tut_series' %}">Series</a> </li>#}
+            <li><a href="{% url 'Tutorial:tut_category' %}">Categories</a> </li>
+
             {% else %}
                 <li><a href="{% url 'Users:login' %}">Login</a></li>
                 <li><a href="{% url 'Users:signup' %}">Signup</a></li>
