--- a/Tutorial/templates/Tutorial/series.html
+++ b/Tutorial/templates/Tutorial/series.html
@@ -4,8 +4,10 @@
 
 {% block content %}
     {% for i in series %}
-       <a href="{% url 'Tutorial:addtutorial' slug=i.series_slug   %}" >{{ i.tutorial_series }}</a>
+       <a href="{% url 'Tutorial:addtutorial' slug=i.series_slug   %}" >Click to create tutorial</a>
+        <a href="{% url 'Tutorial:tutorial_lists' slug=i.series_slug %}">{{ i.tutorial_series }}</a><br>
     {% endfor %}
-    </form>
+
+
 
 {% endblock %}
