--- a/Tutorial/templates/Tutorial/tutorial_form.html
+++ b/Tutorial/templates/Tutorial/tutorial_form.html
@@ -3,11 +3,27 @@
 {% load bootstrap4 %}
 
 {% block content %}
-    <form method="post" enctype="multipart/form-data" class="form">
-    {% csrf_token %}
+     <div class="container">
+
+        <form method="post" enctype="multipart/form-data" class="form">
+            {% csrf_token %}
+
+                    <label for="{{ form.username.id_for_label }}" class="col-md-4 control-label text-right">title<span class="text-red">*</span>:</label>
+                    <div class="col-md-6">
+                        {{ key.tutorial_title }}
+                    </div>
 
 
-    <button type="submit">Send Post</button>
-    </form>
+                    <label for="{{ form.email.id_for_label }}" class="col-md-4 control-label text-right">Content<span class="text-red">*</span>:</label>
+                    <div class="col-md-6">
+                        {{ key.tutorial_content }}
+                    </div>
+
+
+            <div class="col-md-6 col-md-offset-4">
+                            <input type="submit" value="submit" class="btn btn-success">
+            </div>
+        </form>
+</div>
 
 {% endblock %}
