--- a/Posts/templates/Posts/post_form.html
+++ b/Posts/templates/Posts/post_form.html
@@ -1,31 +1,20 @@
-{% extends 'base.html' %}
+{% extends 'pre_base.html' %}
 {% load staticfiles %}
 {% load bootstrap4 %}
 
 {% block content %}
-   <div class="container">
+    <div class="container" style="margin-top: 50px">
+    <div class="mt-40">
+    <form method="post" enctype="multipart/form-data" class="form">
 
-        <form method="post" enctype="multipart/form-data" class="form">
-            {% csrf_token %}
+    {% csrf_token %}
 
-                    <label for="{{ form.username.id_for_label }}" class="col-md-4 control-label text-right">title<span class="text-red">*</span>:</label>
-                    <div class="col-md-6">
-                        {{ key.post_title }}
-                    </div>
+    {% bootstrap_form form %}
+        {% buttons %}
+        <button type="submit" class="btn btn-primary">Signup</button>
+        {% endbuttons %}
+    </form>
+    </div>
+    </div>
 
-
-                    <label for="{{ form.email.id_for_label }}" class="col-md-4 control-label text-right">image<span class="text-red">*</span>:</label>
-                    <div class="col-md-6">
-                        {{ key.img }}
-                    </div>
-
-                <label for="{{ form.email.id_for_label }}" class="col-md-4 control-label text-right">post_content<span class="text-red">*</span>:</label>
-                    <div class="col-md-6">
-                        {{ key.message }}
-                    </div>
-            <div class="col-md-6 col-md-offset-4">
-                            <input type="submit" value="submit" class="btn btn-success">
-            </div>
-        </form>
-</div>
 {% endblock %}
