--- a/Tutorial/templates/Tutorial/tutorial_form.html
+++ b/Tutorial/templates/Tutorial/tutorial_form.html
@@ -1,29 +1,15 @@
-{% extends 'base.html' %}
+{% extends 'pre_base.html' %}
 {% load staticfiles %}
 {% load bootstrap4 %}
 
 {% block content %}
-     <div class="container">
-
-        <form method="post" enctype="multipart/form-data" class="form">
-            {% csrf_token %}
-
-                    <label for="{{ form.username.id_for_label }}" class="col-md-4 control-label text-right">title<span class="text-red">*</span>:</label>
-                    <div class="col-md-6">
-                        {{ key.tutorial_title }}
-                    </div>
-
-
-                    <label for="{{ form.email.id_for_label }}" class="col-md-4 control-label text-right">Content<span class="text-red">*</span>:</label>
-                    <div class="col-md-6">
-                        {{ key.tutorial_content }}
-                    </div>
-
-
-            <div class="col-md-6 col-md-offset-4">
-                            <input type="submit" value="submit" class="btn btn-success">
-            </div>
-        </form>
-</div>
-
+    <div class="container" style="margin-top:50px">
+    <form method="post" enctype="multipart/form-data" class="form">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+        {% buttons %}
+        <button type="submit" class="btn btn-primary">Add Tutorial</button>
+        {% endbuttons %}
+    </form>
+    </div>
 {% endblock %}
